<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/hint_recipient_number_required"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

    <TextView
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_bundle_value"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_bundle_cost"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_request_source"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/received_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_time_received"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />


    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

    <TextView
        android:id="@+id/timeDone"
        android:hint="@string/hint_time_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

</LinearLayout>