<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/hint_recipient_number_required"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#2B3D4D" />

        <TextView
        android:layout_below="@id/number"
        android:id="@+id/value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_bundle_value"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

        <TextView
        android:layout_below="@id/value"
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_bundle_cost"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

        <TextView
        android:layout_below="@id/cost"
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_request_source"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

        <TextView
        android:layout_below="@id/source"
        android:id="@+id/received_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:hint="@string/hint_time_received"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />


        <TextView
        android:layout_below="@id/received_time"
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />

        <TextView
        android:layout_below="@id/status"
        android:id="@+id/timeDone"
        android:hint="@string/hint_time_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="#AEB6BD" />























        <!--<ImageView-->
            <!--android:id="@+id/spacecraftImg"-->
            <!--android:layout_width="150dp"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content">-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
                <!--android:text="Name"-->
                <!--android:id="@+id/nameTxt"-->
                <!--android:padding="10dp"-->
                <!--android:textColor="@color/colorAccent"-->
                <!--android:textStyle="bold"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--/>-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
                <!--android:text="Propellant....................."-->
                <!--android:lines="1"-->
                <!--android:id="@+id/propellantTxt"-->
                <!--android:padding="10dp"-->
                <!--android:layout_alignParentLeft="true"-->
                <!--/>-->

        <!--</LinearLayout>-->

    </LinearLayout>

</android.support.v7.widget.CardView>

</FrameLayout>
<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:card_view="http://schemas.android.com/tools"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <!--<android.support.v7.widget.CardView-->
        <!--android:background="@color/blue_grey"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/card_view"-->
        <!--card_view:cardCornerRadius="6dp"-->
        <!--card_view:cardElevation="3dp"-->
        <!--card_view:cardUseCompatPadding="true">-->

        <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/relative_layout">-->


            <!--<TextView-->
                <!--android:id="@+id/number"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif-medium"-->
                <!--android:hint="@string/hint_recipient_number_required"-->
                <!--android:textAppearance="?android:textAppearanceMedium"-->
                <!--android:textColor="#2B3D4D" />-->

            <!--<TextView-->
                <!--android:layout_below="@id/number"-->
                <!--android:id="@+id/value"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:hint="@string/hint_bundle_value"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="#AEB6BD" />-->

            <!--<TextView-->
                <!--android:layout_below="@id/value"-->
                <!--android:id="@+id/cost"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:hint="@string/hint_bundle_cost"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="#AEB6BD" />-->

            <!--<TextView-->
                <!--android:layout_below="@id/cost"-->
                <!--android:id="@+id/source"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:hint="@string/hint_request_source"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="#AEB6BD" />-->

            <!--<TextView-->
                <!--android:layout_below="@id/source"-->
                <!--android:id="@+id/received_time"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:hint="@string/hint_time_received"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="#AEB6BD" />-->


            <!--<TextView-->
                <!--android:layout_below="@id/received_time"-->
                <!--android:id="@+id/status"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="#AEB6BD" />-->

            <!--<TextView-->
                <!--android:layout_below="@id/status"-->
                <!--android:id="@+id/timeDone"-->
                <!--android:hint="@string/hint_time_done"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif"-->
                <!--android:textAppearance="?android:textAppearanceSmall"-->
                <!--android:textColor="#AEB6BD" />-->



        <!--</RelativeLayout>-->

    <!--</android.support.v7.widget.CardView>-->

<!--</LinearLayout>-->